feat: alteration paramns in controllers
